finished JavaMethodAreaOOM.java in the first time.